test/Fail/Issue5891.agda
-- AIM XXXV, 2022-05-06, issue #5891:
-- SizeUniv : SizeUniv was causing non-termination and inhabitation of Size< 0.
-- This is inconsistent; proof by Jonathan Chan.

{-# OPTIONS --sized-types #-}

open import Agda.Primitive
open import Agda.Builtin.Size

data âŠ¥ : Set where

-- Original exploit:
-- data False : SizeUniv where

False : SizeUniv
False = (X : SizeUniv) â†’ X

-- Should fail.

-- Expected error:
-- SetÏ‰ != SizeUniv
-- when checking that the expression (X : SizeUniv) â†’ X has type SizeUniv

-- Step 1: Hurken's Paradox with SizeUniv : SizeUniv.

â„˜ : SizeUniv â†’ SizeUniv
â„˜ S = S â†’ SizeUniv

U : SizeUniv
U = âˆ€ (X : SizeUniv) â†’ (â„˜ (â„˜ X) â†’ X) â†’ â„˜ (â„˜ X)

Ï„ : â„˜ (â„˜ U) â†’ U
Ï„ t = Î» X f p â†’ t (Î» x â†’ p (f (x X f)))

Ïƒ : U â†’ â„˜ (â„˜ U)
Ïƒ s = s U Ï„

Î” : â„˜ U
Î” y = (âˆ€ p â†’ Ïƒ y p â†’ p (Ï„ (Ïƒ y))) â†’ False

Î© : U
Î© = Ï„ (Î» p â†’ (âˆ€ x â†’ Ïƒ x p â†’ p x))

R : âˆ€ p â†’ (âˆ€ x â†’ Ïƒ x p â†’ p x) â†’ p Î©
R _ ðŸ™ = ðŸ™ Î© (Î» x â†’ ðŸ™ (Ï„ (Ïƒ x)))

M : âˆ€ x â†’ Ïƒ x Î” â†’ Î” x
M _ ðŸš ðŸ› = ðŸ› Î” ðŸš (Î» p â†’ ðŸ› (Î» y â†’ p (Ï„ (Ïƒ y))))

L : (âˆ€ p â†’ (âˆ€ x â†’ Ïƒ x p â†’ p x) â†’ p Î©) â†’ False
L ðŸ˜ = ðŸ˜ Î” M (Î» p â†’ ðŸ˜ (Î» y â†’ p (Ï„ (Ïƒ y))))

-- Prevent unfolding, as this term has no whnf.
-- Stops Agda from looping.

abstract
  false : False
  false = L R

-- This gives us a predecessor on Size.

size-pred : âˆ€ i â†’ Size< i
size-pred i = false (Size< i)

-- Step 2: Size predecessor is inconsistent.

-- Jonathan Chan:
-- I managed to do so using âˆž but only because it's the only closed
-- size expression, not using the âˆž < âˆž property, although the
-- principle is the same as for #3026:

data _>_ (s : Size) : Size â†’ Set where
  lt : (r : Size< s) â†’ s > r

data Acc (s : Size) : Set where
  acc : (âˆ€ {r} â†’ s > r â†’ Acc r) â†’ Acc s

wf : âˆ€ s â†’ Acc s
wf s = acc Î»{ (lt r) â†’ wf r }

Â¬wf : âˆ€ s â†’ Acc s â†’ âŠ¥
Â¬wf s (acc p) = Â¬wf (size-pred s) (p (lt (size-pred s)))

absurd : âŠ¥
absurd = (Â¬wf âˆž) (wf âˆž)
