test/Fail/Issue5891.err
Issue5891.agda:16,9-27: error: [UnequalSorts]
Setω != SizeUniv
when checking that the expression (X : SizeUniv) → X has type
SizeUniv
